Adds more test of long conversion